--- a/config.json
+++ b/config.json
@@ -10,7 +10,5 @@
     "wsextservice" : "local_mobile",
     "gcmpn": "694767596569",
     "customurlscheme": "moodlemobile",
-    "siteurl": "http://learn.sun.ac.za",
-    "skipssoconfirmation": "false",
-    "forcedefaultlanguage": "false"
+    "siteurl": "http://learn.sun.ac.za"
 }
