--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "app_id" : "com.moodle.sunlearn",
+    "app_id" : "za.ac.sun.learn.mobile",
     "appname": "SUNLearn",
     "versioncode" : "2017",
     "versionname" : "0.2",
